# temportofoto

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  db.py  jobs.py  main.py  models.py  utils.py
app/static/: code.js  index.html  style.css
