[project]
name = "temportofoto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.31",
    "titiler-core>=1.1.0",
    "titiler-extensions>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["B", "FAST"]
